log
Thu 21 Mar 2024 10:19:47 PM UTC: 
 tests:  0|5
total_score: 0/70
4201042
Thu 21 Mar 2024 10:42:39 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
4f8afc6
Thu 21 Mar 2024 10:57:16 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |     *dato = (int*)next(L);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
0e5a495
Thu 21 Mar 2024 10:57:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
116896f
Thu 21 Mar 2024 11:07:22 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
849eaf9
Sat 23 Mar 2024 06:38:43 PM UTC: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  3|2
total_score: 40/70
4a7e573
Sat 23 Mar 2024 08:10:28 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
2078c1f
Sat 23 Mar 2024 08:12:08 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
28e93ed
Sat 23 Mar 2024 08:19:53 PM UTC: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  4|1
total_score: 50/70
252b1e5
Sat 23 Mar 2024 08:20:11 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|1
total_score: 50/70
f742d20
Sat 23 Mar 2024 08:20:42 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
3e82105
